--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <tittle> My test page </tittle>
+    <title> My test page </title>
   </head>
   <body>
     Hello there, awesome person!
