--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1> Learning HTML </h1>
+    <img src="https://avatars0.githubusercontent.com/u/31356903?v=4">
     Hello there, awesome person!
   </body>
 </html>
