--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <img src="https://avatars0.githubusercontent.com/u/31356903?v=4">
     Hello there, awesome person!
     <ul>
-      <li>inmanga</li>
-      <li>youtube</li>
-      <li>freecodecamp</li>
-      <li>omegaup</li>
+      <li><a href="https://inmanga.com/">inmanga</a></li>
+      <li><a href="https://www.youtube.com/">youtube</a></li>
+      <li>< href="https://www.freecodecamp.org/">freecodecamp</a></li>
+      <li><a href="https://omegaup.com/">omegaup</a></li>
     </ul>
   </body>
 </html>
