--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title> My test page </title>
+    <link rel="stylesheet" heref="style.css">
   </head>
   <body>
     <h1> Learning HTML </h1>
