--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
       <li><a href="https://inmanga.com/">inmanga</a></li>
       <li><a href="https://www.youtube.com/">youtube</a></li>
-      <li>< href="https://www.freecodecamp.org/">freecodecamp</a></li>
+      <li><a href="https://www.freecodecamp.org/">freecodecamp</a></li>
       <li><a href="https://omegaup.com/">omegaup</a></li>
     </ul>
   </body>
